--- a/hazelcast/src/main/resources/readme.html
+++ b/hazelcast/src/main/resources/readme.html
@@ -157,7 +157,7 @@
 					<li><strong>hazelcast-spring&ndash;<i>${project.version}</i>.jar</strong> &mdash; This is the library to integrate Hazelcast with Spring based applications.</li>
 					<li><strong>hazelcast-wm&ndash;<i>${project.version}</i>.jar</strong> &mdash; This is the Hazelcast's session replication module library.</li>
 					<li><strong>hazelcast-jca&ndash;<i>${project.version}</i>.jar</strong> and <strong>hazelcast-jca-rar&ndash;<i>${project.version}</i>.jar</strong> &mdash; These are the libraries when you want to use a Hazelcast Resource Adapter implementation.</li>
-					<li><strong>hazelcast-cloud&ndash;<i>${project.version}</i>.jar</strong> &mdash; To connect to a Hazelcast cluster on AWS as a client or member, include this library.</li>
+					<li><strong>hazelcast-aws&ndash;<i>${project.version}</i>.jar</strong> &mdash; To connect to a Hazelcast cluster on AWS as a client or member, include this library.</li>
 					<li><strong>hazelcast-jclouds&ndash;<i>${project.version}</i>.jar</strong> &mdash; To connect to a Hazelcast cluster with jclouds as a client or member, include this library.</li>
 					<li><strong>hazelcast-hibernate3, 4, 5&ndash;<i>${project.version}</i>.jar</strong>&ndash;<i>${project.version}</i>.jar</strong> &mdash; These are the libraries that enable Hazelcast to be used as a Hibernate 2nd Level Cache, for Hibernate 3, 4, and 5.</li>
                 </ul>
