--- a/hazelcast/src/main/resources/readme.html
+++ b/hazelcast/src/main/resources/readme.html
@@ -151,15 +151,15 @@
 			
 			<li><strong>/lib</strong>
 				<ul>
-					<li><strong>hazelcast&ndash;<i>${project.version}</i>.jar</strong> &mdash; The core hazelcast JAR.</li>
-					<li><strong>hazelcast-all&ndash;<i>${project.version}</i>.jar</strong> &mdash; Includes all of the libraries here in one JAR file.</li>
-					<li><strong>hazelcast-client&ndash;<i>${project.version}</i>.jar</strong> &mdash; The Java native client library to be included on classpath for Hazelcast client. This library contains clients which use the new Hazelcast Binary Client Protocol, introduced in the Hazelcast 3.5 Release.</li>
-					<li><strong>hazelcast-spring&ndash;<i>${project.version}</i>.jar</strong> &mdash; This is the library to integrate Hazelcast with Spring based applications.</li>
-					<li><strong>hazelcast-wm&ndash;<i>${project.version}</i>.jar</strong> &mdash; This is the Hazelcast's session replication module library.</li>
-					<li><strong>hazelcast-jca&ndash;<i>${project.version}</i>.jar</strong> and <strong>hazelcast-jca-rar&ndash;<i>${project.version}</i>.jar</strong> &mdash; These are the libraries when you want to use a Hazelcast Resource Adapter implementation.</li>
-					<li><strong>hazelcast-aws&ndash;<i>${project.version}</i>.jar</strong> &mdash; To connect to a Hazelcast cluster on AWS as a client or member, include this library.</li>
-					<li><strong>hazelcast-jclouds&ndash;<i>${project.version}</i>.jar</strong> &mdash; To connect to a Hazelcast cluster with jclouds as a client or member, include this library.</li>
-					<li><strong>hazelcast-hibernate3, 4, 5&ndash;<i>${project.version}</i>.jar</strong>&ndash;<i>${project.version}</i>.jar</strong> &mdash; These are the libraries that enable Hazelcast to be used as a Hibernate 2nd Level Cache, for Hibernate 3, 4, and 5.</li>
+					<li><strong>hazelcast.jar</strong> &mdash; The core hazelcast JAR.</li>
+					<li><strong>hazelcast-all.jar</strong> &mdash; Includes all of the libraries here in one JAR file.</li>
+					<li><strong>hazelcast-client.jar</strong> &mdash; The Java native client library to be included on classpath for Hazelcast client. This library contains clients which use the new Hazelcast Binary Client Protocol, introduced in the Hazelcast 3.5 Release.</li>
+					<li><strong>hazelcast-spring.jar</strong> &mdash; This is the library to integrate Hazelcast with Spring based applications.</li>
+					<li><strong>hazelcast-wm.jar</strong> &mdash; This is the Hazelcast's session replication module library.</li>
+					<li><strong>hazelcast-jca.jar</strong> and <strong>hazelcast-jca-rar.jar</strong> &mdash; These are the libraries when you want to use a Hazelcast Resource Adapter implementation.</li>
+					<li><strong>hazelcast-aws.jar</strong> &mdash; To connect to a Hazelcast cluster on AWS as a client or member, include this library.</li>
+					<li><strong>hazelcast-jclouds.jar</strong> &mdash; To connect to a Hazelcast cluster with jclouds as a client or member, include this library.</li>
+					<li><strong>hazelcast-hibernate.jar</strong> &mdash; These are the libraries that enable Hazelcast to be used as a Hibernate 2nd Level Cache, for Hibernate 3, 4, and 5.</li>
                 </ul>
 			</li>
 			
