--- a/hazelcast/src/main/resources/readme.html
+++ b/hazelcast/src/main/resources/readme.html
@@ -157,9 +157,9 @@
 					<li><strong>hazelcast-spring.jar</strong> &mdash; This is the library to integrate Hazelcast with Spring based applications.</li>
 					<li><strong>hazelcast-wm.jar</strong> &mdash; This is the Hazelcast's session replication module library.</li>
 					<li><strong>hazelcast-jca.jar</strong> and <strong>hazelcast-jca-rar.jar</strong> &mdash; These are the libraries when you want to use a Hazelcast Resource Adapter implementation.</li>
-					<li><strong>hazelcast-aws.jar</strong> &mdash; To connect to a Hazelcast cluster on AWS as a client or member, include this library.</li>
+					<li><strong>hazelcast-aws.jar</strong> &mdash; To connect to a Hazelcast cluster on AWS as a client or member, include this library (previously known as hazelcast-cloud.jar).</li>
 					<li><strong>hazelcast-jclouds.jar</strong> &mdash; To connect to a Hazelcast cluster with jclouds as a client or member, include this library.</li>
-					<li><strong>hazelcast-hibernate.jar</strong> &mdash; These are the libraries that enable Hazelcast to be used as a Hibernate 2nd Level Cache, for Hibernate 3, 4, and 5.</li>
+					<li><strong>hazelcast-hibernate.jar</strong> &mdash; These are the libraries that enable Hazelcast to be used as a Hibernate 2nd Level Cache, for Hibernate 3 and 4.</li>
                 </ul>
 			</li>
 			
