--- a/hazelcast/src/main/resources/readme.html
+++ b/hazelcast/src/main/resources/readme.html
@@ -155,7 +155,7 @@
 					<li><strong>hazelcast-all.jar</strong> &mdash; Includes all of the libraries here in one JAR file.</li>
 					<li><strong>hazelcast-client.jar</strong> &mdash; The Java native client library to be included on classpath for Hazelcast client. This library contains clients which use the new Hazelcast Binary Client Protocol, introduced in the Hazelcast 3.5 Release.</li>
 					<li><strong>hazelcast-spring.jar</strong> &mdash; This is the library to integrate Hazelcast with Spring based applications.</li>
-					<li><strong>further-modules.txt</strong> &mdash; This file includes the list of other modules and plugins provided by Hazelcast, along with the information on how you can reach them.</li>
+					<li><strong>further-modules.txt</strong> &mdash; This text file includes the list of other modules and plugins provided/supported by Hazelcast and the community, along with the information on how you can reach them.</li>
                 </ul>
 			</li>
 			
