--- a/hazelcast/src/main/resources/readme.html
+++ b/hazelcast/src/main/resources/readme.html
@@ -155,11 +155,7 @@
 					<li><strong>hazelcast-all.jar</strong> &mdash; Includes all of the libraries here in one JAR file.</li>
 					<li><strong>hazelcast-client.jar</strong> &mdash; The Java native client library to be included on classpath for Hazelcast client. This library contains clients which use the new Hazelcast Binary Client Protocol, introduced in the Hazelcast 3.5 Release.</li>
 					<li><strong>hazelcast-spring.jar</strong> &mdash; This is the library to integrate Hazelcast with Spring based applications.</li>
-					<li><strong>hazelcast-wm.jar</strong> &mdash; This is the Hazelcast's session replication module library.</li>
-					<li><strong>hazelcast-jca.jar</strong> and <strong>hazelcast-jca-rar.jar</strong> &mdash; These are the libraries when you want to use a Hazelcast Resource Adapter implementation.</li>
-					<li><strong>hazelcast-aws.jar</strong> &mdash; To connect to a Hazelcast cluster on AWS as a client or member, include this library (previously known as hazelcast-cloud.jar).</li>
-					<li><strong>hazelcast-jclouds.jar</strong> &mdash; To connect to a Hazelcast cluster with jclouds as a client or member, include this library.</li>
-					<li><strong>hazelcast-hibernate.jar</strong> &mdash; These are the libraries that enable Hazelcast to be used as a Hibernate 2nd Level Cache, for Hibernate 3 and 4.</li>
+					<li><strong>further-modules.txt</strong> &mdash; This text file includes the list of other modules and plugins provided/supported by Hazelcast and the community, along with the information on how you can reach them.</li>
                 </ul>
 			</li>
 			
